# mcp-augment

./: .gitignore  AGENTS.md  LICENSE  README.md  ROADMAP.md  demo_native_ui.py  pyproject.toml
.kilo/hooks/: auto-approve-safe.sh  auto-format.sh  block-sensitive-files.sh  config.yaml  inject-git-context.sh  mode-enforcement.sh  notify-search-oversight.sh  post-review-search-output.sh  post-shape-search-output.sh  pre-correct-search-query.sh  pre-review-search-query.sh  validate-bash-command.sh
project-tools/mcp-hooks-server/: com.mcp-augment.plist  demo_search_backend.py  hook_validator.py  mcp-augment-http.py  mcp-augment.py  mode-rules.yaml  setup.sh  start-servers.sh  stop-servers.sh
tests/: cursor_mcp_smoke.py  mcp_protocol_test.py  test_demo_search_interception.py  test_hook_validation.py  test_native_dialog_flow.py  test_review_resume_interception.py  test_two_way_hooks.py
